# ZxJson

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua  xmake_open_vs.bat
.github/workflows/: ci.yml
cmake/: Doxygen.cmake  ZQFSettings.cmake  ZQF_VCPKG.cmake  config.cmake
cmake/modules/: zqf_vcpkg.cmake
cmake/presets/: base.json  linux-clang-arm64.json  linux-clang-x64.json  linux-gcc-arm64.json  linux-gcc-x64.json  linux.json  macos-clang-arm64.json  macos.json  mingw-gcc-x64.json  windows-clang-cl-arm64.json  windows-clang-cl-x64.json  windows-msvc-arm64.json  windows-msvc-x64.json  windows-msvc-x86.json  windows.json
cmake/vcpkg/: fetch.cmake  vcpkg.json
include/ZxJson/: JDoc.h  JIO.h  JParser.h  JValue.h  Platform.h
src/: CMakeLists.txt  JDoc.cpp  JIO.cpp  JParser.cpp  JValue.cpp  Platform.cpp
src/ZxJson/: JDoc.cpp  JParser.h  JValue.h
src/cmake/: Config.cmake.in
src/include/ZxJson/: JValue.h  Platform.h
src/src/Zut/: ZxJson.h
src/src/Zut/ZxJson/: JDoc.cpp  JDoc.h  JIO.cpp  JIO.h  JParser.cpp  JParser.h  JReflex.h  JValue.cpp  JValue.h  Plat.cpp  Plat.h
src/src/Zut/ZxJson/Reflex/: Field.h  Reflex.h  Traits.h
src/src/ZxJson/: JDoc.cpp  JDoc.h  JIO.cpp  JIO.h  JParser.cpp  JParser.h  JValue.cpp  JValue.h  Platform.cpp
test/: CMakeLists.txt  main.cpp
test/Reflex_Test/: CMakeLists.txt  main.cpp
test/ZxJson_Test/: CMakeLists.txt
tryout/: CMakeLists.txt  main.cpp
tryout/Reflex_Test/: CMakeLists.txt  main.cpp
tryout/ZxJson_Test/: CMakeLists.txt  main.cpp
